src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__string__cast_string_to_bytes.snap
---
source: src/expr/src/scalar/func/impls/string.rs
expression: "#[sqlfunc(\n    sqlname = \"text_to_bytea\",\n    preserves_uniqueness = true,\n    inverse = to_unary!(super::CastBytesToString)\n)]\nfn cast_string_to_bytes<'a>(a: &'a str) -> Result<ByteString, EvalError> {\n    strconv::parse_bytes(a).map(Into::into).err_into()\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect
)]
pub struct CastStringToBytes;
impl<'a> crate::func::EagerUnaryFunc<'a> for CastStringToBytes {
    type Input = &'a str;
    type Output = Result<ByteString, EvalError>;
    fn call(&self, a: Self::Input) -> Self::Output {
        cast_string_to_bytes(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
    fn inverse(&self) -> Option<crate::UnaryFunc> {
        to_unary!(super::CastBytesToString)
    }
    fn preserves_uniqueness(&self) -> bool {
        true
    }
}
impl std::fmt::Display for CastStringToBytes {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str("text_to_bytea")
    }
}
fn cast_string_to_bytes<'a>(a: &'a str) -> Result<ByteString, EvalError> {
    strconv::parse_bytes(a).map(Into::into).err_into()
}
